Swagger (#13)
* [DASHBOARD] swagger not working

* [SWAGGER] all the documentation
